--- a/Task_1/WpfApp/MainWindow.xaml
+++ b/Task_1/WpfApp/MainWindow.xaml
@@ -76,7 +76,8 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button Content="AsignOrder" Grid.Column="3" HorizontalAlignment="Left" Margin="326.2,10,0,0" VerticalAlignment="Top" Width="131" Height="52" FontSize="20" Click="OnAsignOrderButtonClick"/>
+                    <Button Content="AsignOrder" Grid.Column="3" HorizontalAlignment="Left" Margin="326.2,10,0,0" VerticalAlignment="Top" Width="131" Height="52" FontSize="15" Click="OnAsignOrderButtonClick"/>
+                    <Button Content="AsignFreeOrder" Grid.Column="3" HorizontalAlignment="Left" Margin="195.2,10,0,0" VerticalAlignment="Top" Width="131" Height="52" FontSize="15" Click="OnAsignRandomOrderButtonClick"/>
                 </Grid>
             </TabItem>
         </TabControl>
